--- a/source/Appccelerate.StateMachine.Facts/packages.config
+++ b/source/Appccelerate.StateMachine.Facts/packages.config
@@ -5,13 +5,13 @@
   <package id="Appccelerate.Development.Analyzers" version="2.0.0" targetFramework="net45" developmentDependency="true" />
   <package id="Appccelerate.Development.Facts" version="2.0.0" targetFramework="net45" developmentDependency="true" />
   <package id="Appccelerate.Development.xUnit" version="2.0.0" targetFramework="net45" developmentDependency="true" />
-  <package id="Appccelerate.Fundamentals" version="3.3.0-commitea8ae2ca" targetFramework="net45" />
   <package id="Appccelerate.VersionTask" version="1.22.0" targetFramework="net45" developmentDependency="true" />
-  <package id="FakeItEasy" version="1.25.2" targetFramework="net45" />
+  <package id="FakeItEasy" version="3.3.2" targetFramework="net45" />
   <package id="FluentAssertions" version="3.4.0" targetFramework="net45" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net45" developmentDependency="true" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.core" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.extensibility.core" version="2.0.0" targetFramework="net45" />
-  <package id="xunit.runner.msbuild" version="2.0.0" targetFramework="net45" />
+  <package id="xunit.core" version="2.1.0" targetFramework="net45" />
+  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net45" />
+  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net45" />
+  <package id="xunit.runner.msbuild" version="2.1.0" targetFramework="net45" />
 </packages>
