--- a/source/Appccelerate.StateMachine/appccelerate.statemachine.nuspec
+++ b/source/Appccelerate.StateMachine/appccelerate.statemachine.nuspec
@@ -25,8 +25,8 @@
     <copyright>Copyright 2012-2017</copyright>
     <tags>Appccelerate state-machine</tags>
     <frameworkAssemblies>
-      <frameworkAssembly assemblyName="System" targetFramework="portable-windows8+net45+wp80" />
-      <frameworkAssembly assemblyName="System.Core" targetFramework="portable-windows8+net45+wp80" />
+      <frameworkAssembly assemblyName="System" />
+      <frameworkAssembly assemblyName="System.Core" />
     </frameworkAssemblies>
   </metadata>
   <files>
