--- a/source/Appccelerate.StateMachine.Specs/Appccelerate.StateMachine.Specs.csproj
+++ b/source/Appccelerate.StateMachine.Specs/Appccelerate.StateMachine.Specs.csproj
@@ -73,6 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Async\AsyncPassiveStateMachines.cs" />
+    <Compile Include="Async\HierarchicalTransitions.cs" />
     <Compile Include="Async\StateMachineNameReporter.cs" />
     <Compile Include="Sync\ActiveStateMachines.cs" />
     <Compile Include="Async\CurrentStateExtension.cs" />
